Make links relative for GitHub pages

--- a/example-4.html
+++ b/example-4.html
@@ -10,7 +10,7 @@
 <body>
 <a-scene>
 	<a-assets>
-		<img id="stevie" src="/images/examples/stevie.png">  <!-- a texture map we prepared earlier -->
+		<img id="stevie" src="images/examples/stevie.png">  <!-- a texture map we prepared earlier -->
 	</a-assets>
 	<a-entity position="5 3 5" rotation="-30 45 0">
 		<a-camera></a-camera>
