--- a/example-6.html
+++ b/example-6.html
@@ -42,10 +42,10 @@
 <body>
 <a-scene>
 	<a-assets>
-		<img id="sky-one" src="/images/examples/sky-one.jpg">
-		<img id="sky-two" src="/images/examples/sky-two.jpg">
-		<img id="sky-three" src="/images/examples/sky-three.jpg">
-		<img id="sky-four" src="/images/examples/sky-four.jpg">
+		<img id="sky-one" src="images/examples/sky-one.jpg">
+		<img id="sky-two" src="images/examples/sky-two.jpg">
+		<img id="sky-three" src="images/examples/sky-three.jpg">
+		<img id="sky-four" src="images/examples/sky-four.jpg">
 	</a-assets>
 	<a-sky id="sky-image" src="#sky-one"></a-sky>
 </a-scene>
