--- a/presentation.html
+++ b/presentation.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="shortcut icon" href="favicon.ico">
-	<script src="/production/js/main.js"></script>
+	<script src="production/js/main.js"></script>
 	<title>Hands on with A-Frame</title>
 </head>
 <body>
@@ -16,89 +16,89 @@
 			  position="0 3.8 0"
 			  rotation="270 270 90"></a-entity>
 	<a-assets>
-		<img id="stevie" src="/images/examples/stevie.png" />
-		<img id="sky" src="/images/examples/sky-one.jpg" />
-		<a-asset-item id="tree1" src="/images/examples/tree1.dae"></a-asset-item>
-		<a-asset-item id="tree2" src="/images/examples/tree2.dae"></a-asset-item>
-		<a-asset-item id="crate-mtl" src="/images/examples/crate.mtl"></a-asset-item>
-		<a-asset-item id="crate-obj" src="/images/examples/crate.obj"></a-asset-item>
+		<img id="stevie" src="images/examples/stevie.png" />
+		<img id="sky" src="images/examples/sky-one.jpg" />
+		<a-asset-item id="tree1" src="images/examples/tree1.dae"></a-asset-item>
+		<a-asset-item id="tree2" src="images/examples/tree2.dae"></a-asset-item>
+		<a-asset-item id="crate-mtl" src="images/examples/crate.mtl"></a-asset-item>
+		<a-asset-item id="crate-obj" src="images/examples/crate.obj"></a-asset-item>
 		<a-asset-item id="brainstem" src="https://cdn.aframe.io/test-models/models/brainstem/BrainStem.gltf"></a-asset-item>
-		<img id="slide-1-stevie" src="/images/1-stevie.png">
-		<img id="slide-2-topics" src="/images/2-topics.png">
-		<img id="slide-3-what-is-vr" src="/images/3-what-is-vr.png">
-		<img id="slide-4-what-is-vr-2" src="/images/4-what-is-vr-2.png">
-		<img id="slide-5-what-is-vr-3" src="/images/5-what-is-vr-3.png">
-		<img id="slide-6-why-i-love" src="/images/6-why-i-love.png">
-		<img id="slide-7-web-sharing" src="/images/7-web-sharing.png">
-		<img id="slide-8-vr-allows" src="/images/8-vr-allows.png">
-		<img id="slide-9-imagination-in-your" src="/images/9-imagination-in-your.png">
-		<img id="slide-10-imagination-on-heads" src="/images/10-imagination-on-heads.png">
-		<img id="slide-11-getting-here" src="/images/11-getting-here.png">
-		<img id="slide-12-science-fiction" src="/images/12-science-fiction.png">
-		<img id="slide-13-some-non-vr" src="/images/13-some-non-vr.png">
-		<img id="slide-14-viewmaster" src="/images/14-viewmaster.png">
-		<img id="slide-15-science-fact" src="/images/15-science-fact.png">
-		<img id="slide-16-damocles" src="/images/16-damocles.png">
-		<img id="slide-17-more-history" src="/images/17-more-history.png">
-		<img id="slide-18-vr-on-web" src="/images/18-vr-on-web.png">
-		<img id="slide-19-vrml" src="/images/19-vrml.png">
-		<img id="slide-20-x3d" src="/images/20-x3d.png">
-		<img id="slide-21-o3d" src="/images/21-o3d.png">
-		<img id="slide-22-webgl" src="/images/22-webgl.png">
-		<img id="slide-23-glam" src="/images/23-glam.png">
-		<img id="slide-24-react-vr" src="/images/24-react-vr.png">
-		<img id="slide-25-i-get-excited" src="/images/25-i-get-excited.png">
-		<img id="slide-26-the-woes" src="/images/26-the-woes.png">
-		<img id="slide-27-carmel" src="/images/27-carmel.png">
-		<img id="slide-28-everything-works" src="/images/28-everything-works.png">
-		<img id="slide-29-aframe-history-1" src="/images/29-aframe-history-1.png">
-		<img id="slide-30-aframe-history-2" src="/images/30-aframe-history-2.png">
-		<img id="slide-31-aframe" src="/images/31-aframe.png">
-		<img id="slide-32-aframe-detail" src="/images/32-aframe-detail.png">
-		<img id="slide-33-entity-1" src="/images/33-entity-1.png">
-		<img id="slide-34-entity-2" src="/images/34-entity-2.png">
-		<img id="slide-35-component-1" src="/images/35-component-1.png">
-		<img id="slide-36-component-2" src="/images/36-component-2.png">
-		<img id="slide-37-component-2" src="/images/37-component-2.png">
-		<img id="slide-38-system-2" src="/images/38-system-2.png">
-		<img id="slide-39-system-1" src="/images/39-system-1.png">
-		<img id="slide-40-system-2" src="/images/40-system-2.png">
-		<img id="slide-41-scene" src="/images/41-scene.png">
-		<img id="slide-42-scene-2" src="/images/42-scene-2.png">
-		<img id="slide-43-start-building" src="/images/43-start-building.png">
-		<img id="slide-44-3d-basics" src="/images/44-3d-basics.png">
-		<img id="slide-45-lights" src="/images/45-lights.png">
-		<img id="slide-46-camera" src="/images/46-camera.png">
-		<img id="slide-47-camera-2" src="/images/47-camera-2.png">
-		<img id="slide-48-box" src="/images/48-box.png">
-		<img id="slide-49-first-scene" src="/images/49-first-scene.png">
-		<img id="slide-50-all-together" src="/images/50-all-together.png">
-		<img id="slide-51-scene" src="/images/51-scene.png">
-		<img id="slide-52-lights" src="/images/52-lights.png">
-		<img id="slide-53-camera" src="/images/53-camera.png">
-		<img id="slide-54-action" src="/images/54-action.png">
-		<img id="slide-55-output" src="/images/55-output.png">
-		<img id="slide-56-more-lights" src="/images/56-more-lights.png">
-		<img id="slide-57-more-output" src="/images/57-more-output.png">
-		<img id="slide-58-add-floor" src="/images/58-add-floor.png">
-		<img id="slide-59-with-floor" src="/images/59-with-floor.png">
-		<img id="slide-60-its-not-pretty" src="/images/60-its-not-pretty.png">
-		<img id="slide-61-textures" src="/images/61-textures.png">
-		<img id="slide-62-add-texture" src="/images/62-add-texture.png">
-		<img id="slide-63-with-texture" src="/images/63-with-texture.png">
-		<img id="slide-64-add-rotate" src="/images/64-add-rotate.png">
-		<img id="slide-65-model" src="/images/65-model.png">
-		<img id="slide-66-models-code" src="/images/66-models-code.png">
-		<img id="slide-67-models-added" src="/images/67-models-added.png">
-		<img id="slide-68-sky" src="/images/68-sky.png">
-		<img id="slide-69-see-sky" src="/images/69-see-sky.png">
-		<img id="slide-70-other-primitives" src="/images/70-other-primitives.png">
-		<img id="slide-71-more-primitive" src="/images/71-more-primitive.png">
-		<img id="slide-72-aframe-resources" src="/images/72-aframe-resources.png">
-		<img id="slide-73-built-in-aframe" src="/images/73-built-in-aframe.png">
-		<img id="slide-74-fun" src="/images/74-fun.png">
-		<img id="slide-75-good-enough" src="/images/75-good-enough.png">
-		<img id="slide-76-thanks" src="/images/76-thanks.png">
+		<img id="slide-1-stevie" src="images/1-stevie.png">
+		<img id="slide-2-topics" src="images/2-topics.png">
+		<img id="slide-3-what-is-vr" src="images/3-what-is-vr.png">
+		<img id="slide-4-what-is-vr-2" src="images/4-what-is-vr-2.png">
+		<img id="slide-5-what-is-vr-3" src="images/5-what-is-vr-3.png">
+		<img id="slide-6-why-i-love" src="images/6-why-i-love.png">
+		<img id="slide-7-web-sharing" src="images/7-web-sharing.png">
+		<img id="slide-8-vr-allows" src="images/8-vr-allows.png">
+		<img id="slide-9-imagination-in-your" src="images/9-imagination-in-your.png">
+		<img id="slide-10-imagination-on-heads" src="images/10-imagination-on-heads.png">
+		<img id="slide-11-getting-here" src="images/11-getting-here.png">
+		<img id="slide-12-science-fiction" src="images/12-science-fiction.png">
+		<img id="slide-13-some-non-vr" src="images/13-some-non-vr.png">
+		<img id="slide-14-viewmaster" src="images/14-viewmaster.png">
+		<img id="slide-15-science-fact" src="images/15-science-fact.png">
+		<img id="slide-16-damocles" src="images/16-damocles.png">
+		<img id="slide-17-more-history" src="images/17-more-history.png">
+		<img id="slide-18-vr-on-web" src="images/18-vr-on-web.png">
+		<img id="slide-19-vrml" src="images/19-vrml.png">
+		<img id="slide-20-x3d" src="images/20-x3d.png">
+		<img id="slide-21-o3d" src="images/21-o3d.png">
+		<img id="slide-22-webgl" src="images/22-webgl.png">
+		<img id="slide-23-glam" src="images/23-glam.png">
+		<img id="slide-24-react-vr" src="images/24-react-vr.png">
+		<img id="slide-25-i-get-excited" src="images/25-i-get-excited.png">
+		<img id="slide-26-the-woes" src="images/26-the-woes.png">
+		<img id="slide-27-carmel" src="images/27-carmel.png">
+		<img id="slide-28-everything-works" src="images/28-everything-works.png">
+		<img id="slide-29-aframe-history-1" src="images/29-aframe-history-1.png">
+		<img id="slide-30-aframe-history-2" src="images/30-aframe-history-2.png">
+		<img id="slide-31-aframe" src="images/31-aframe.png">
+		<img id="slide-32-aframe-detail" src="images/32-aframe-detail.png">
+		<img id="slide-33-entity-1" src="images/33-entity-1.png">
+		<img id="slide-34-entity-2" src="images/34-entity-2.png">
+		<img id="slide-35-component-1" src="images/35-component-1.png">
+		<img id="slide-36-component-2" src="images/36-component-2.png">
+		<img id="slide-37-component-2" src="images/37-component-2.png">
+		<img id="slide-38-system-2" src="images/38-system-2.png">
+		<img id="slide-39-system-1" src="images/39-system-1.png">
+		<img id="slide-40-system-2" src="images/40-system-2.png">
+		<img id="slide-41-scene" src="images/41-scene.png">
+		<img id="slide-42-scene-2" src="images/42-scene-2.png">
+		<img id="slide-43-start-building" src="images/43-start-building.png">
+		<img id="slide-44-3d-basics" src="images/44-3d-basics.png">
+		<img id="slide-45-lights" src="images/45-lights.png">
+		<img id="slide-46-camera" src="images/46-camera.png">
+		<img id="slide-47-camera-2" src="images/47-camera-2.png">
+		<img id="slide-48-box" src="images/48-box.png">
+		<img id="slide-49-first-scene" src="images/49-first-scene.png">
+		<img id="slide-50-all-together" src="images/50-all-together.png">
+		<img id="slide-51-scene" src="images/51-scene.png">
+		<img id="slide-52-lights" src="images/52-lights.png">
+		<img id="slide-53-camera" src="images/53-camera.png">
+		<img id="slide-54-action" src="images/54-action.png">
+		<img id="slide-55-output" src="images/55-output.png">
+		<img id="slide-56-more-lights" src="images/56-more-lights.png">
+		<img id="slide-57-more-output" src="images/57-more-output.png">
+		<img id="slide-58-add-floor" src="images/58-add-floor.png">
+		<img id="slide-59-with-floor" src="images/59-with-floor.png">
+		<img id="slide-60-its-not-pretty" src="images/60-its-not-pretty.png">
+		<img id="slide-61-textures" src="images/61-textures.png">
+		<img id="slide-62-add-texture" src="images/62-add-texture.png">
+		<img id="slide-63-with-texture" src="images/63-with-texture.png">
+		<img id="slide-64-add-rotate" src="images/64-add-rotate.png">
+		<img id="slide-65-model" src="images/65-model.png">
+		<img id="slide-66-models-code" src="images/66-models-code.png">
+		<img id="slide-67-models-added" src="images/67-models-added.png">
+		<img id="slide-68-sky" src="images/68-sky.png">
+		<img id="slide-69-see-sky" src="images/69-see-sky.png">
+		<img id="slide-70-other-primitives" src="images/70-other-primitives.png">
+		<img id="slide-71-more-primitive" src="images/71-more-primitive.png">
+		<img id="slide-72-aframe-resources" src="images/72-aframe-resources.png">
+		<img id="slide-73-built-in-aframe" src="images/73-built-in-aframe.png">
+		<img id="slide-74-fun" src="images/74-fun.png">
+		<img id="slide-75-good-enough" src="images/75-good-enough.png">
+		<img id="slide-76-thanks" src="images/76-thanks.png">
 	</a-assets>
 	<a-entity class="slide" id="slide-1" data-cameraposition="0 3.8 0" data-camerarotation="270 270 90">
 		<a-box
